kclvm/tools/src/vet/snapshots/kclvm_tools__vet__tests__test_expr_builder__build_with_json_no_schema_name-2.snap
---
source: tools/src/vet/tests.rs
expression: got_ast_json_str
---
{
  "column": 0,
  "end_column": 1,
  "end_line": 5,
  "filename": "<workspace>/simple.k.json",
  "line": 1,
  "node": {
    "data": {
      "items": [
        {
          "column": 0,
          "end_column": 1,
          "end_line": 5,
          "filename": "<workspace>/simple.k.json",
          "line": 1,
          "node": {
            "insert_index": -1,
            "key": {
              "column": 4,
              "end_column": 9,
              "end_line": 3,
              "filename": "<workspace>/simple.k.json",
              "line": 3,
              "node": {
                "data": {
                  "is_long_string": false,
                  "raw_value": "\"age\"",
                  "value": "age"
                },
                "type": "StringLit"
              }
            },
            "operation": "Union",
            "value": {
              "column": 11,
              "end_column": 13,
              "end_line": 3,
              "filename": "<workspace>/simple.k.json",
              "line": 3,
              "node": {
                "data": {
                  "binary_suffix": null,
                  "value": {
                    "data": 18,
                    "type": "Int"
                  }
                },
                "type": "NumberLit"
              }
            }
          }
        },
        {
          "column": 0,
          "end_column": 1,
          "end_line": 5,
          "filename": "<workspace>/simple.k.json",
          "line": 1,
          "node": {
            "insert_index": -1,
            "key": {
              "column": 4,
              "end_column": 13,
              "end_line": 4,
              "filename": "<workspace>/simple.k.json",
              "line": 4,
              "node": {
                "data": {
                  "is_long_string": false,
                  "raw_value": "\"message\"",
                  "value": "message"
                },
                "type": "StringLit"
              }
            },
            "operation": "Union",
            "value": {
              "column": 15,
              "end_column": 30,
              "end_line": 4,
              "filename": "<workspace>/simple.k.json",
              "line": 4,
              "node": {
                "data": {
                  "is_long_string": false,
                  "raw_value": "\"This is Alice\"",
                  "value": "This is Alice"
                },
                "type": "StringLit"
              }
            }
          }
        },
        {
          "column": 0,
          "end_column": 1,
          "end_line": 5,
          "filename": "<workspace>/simple.k.json",
          "line": 1,
          "node": {
            "insert_index": -1,
            "key": {
              "column": 4,
              "end_column": 10,
              "end_line": 2,
              "filename": "<workspace>/simple.k.json",
              "line": 2,
              "node": {
                "data": {
                  "is_long_string": false,
                  "raw_value": "\"name\"",
                  "value": "name"
                },
                "type": "StringLit"
              }
            },
            "operation": "Union",
            "value": {
              "column": 12,
              "end_column": 19,
              "end_line": 2,
              "filename": "<workspace>/simple.k.json",
              "line": 2,
              "node": {
                "data": {
                  "is_long_string": false,
                  "raw_value": "\"Alice\"",
                  "value": "Alice"
                },
                "type": "StringLit"
              }
            }
          }
        }
      ]
    },
    "type": "Config"
  }
}
