kclvm/tools/src/vet/snapshots/kclvm_tools__vet__tests__test_expr_builder__build_with_json_no_schema_name-4.snap
---
source: tools/src/vet/tests.rs
expression: got_ast_json_str
---
{
  "column": 0,
  "end_column": 1,
  "end_line": 7,
  "filename": "<workspace>/list.k.json",
  "line": 1,
  "node": {
    "data": {
      "ctx": "Load",
      "elts": [
        {
          "column": 4,
          "end_column": 5,
          "end_line": 6,
          "filename": "<workspace>/list.k.json",
          "line": 2,
          "node": {
            "data": {
              "items": [
                {
                  "column": 4,
                  "end_column": 5,
                  "end_line": 6,
                  "filename": "<workspace>/list.k.json",
                  "line": 2,
                  "node": {
                    "insert_index": -1,
                    "key": {
                      "column": 8,
                      "end_column": 13,
                      "end_line": 4,
                      "filename": "<workspace>/list.k.json",
                      "line": 4,
                      "node": {
                        "data": {
                          "is_long_string": false,
                          "raw_value": "\"age\"",
                          "value": "age"
                        },
                        "type": "StringLit"
                      }
                    },
                    "operation": "Union",
                    "value": {
                      "column": 15,
                      "end_column": 17,
                      "end_line": 4,
                      "filename": "<workspace>/list.k.json",
                      "line": 4,
                      "node": {
                        "data": {
                          "binary_suffix": null,
                          "value": {
                            "data": 18,
                            "type": "Int"
                          }
                        },
                        "type": "NumberLit"
                      }
                    }
                  }
                },
                {
                  "column": 4,
                  "end_column": 5,
                  "end_line": 6,
                  "filename": "<workspace>/list.k.json",
                  "line": 2,
                  "node": {
                    "insert_index": -1,
                    "key": {
                      "column": 8,
                      "end_column": 17,
                      "end_line": 5,
                      "filename": "<workspace>/list.k.json",
                      "line": 5,
                      "node": {
                        "data": {
                          "is_long_string": false,
                          "raw_value": "\"message\"",
                          "value": "message"
                        },
                        "type": "StringLit"
                      }
                    },
                    "operation": "Union",
                    "value": {
                      "column": 19,
                      "end_column": 34,
                      "end_line": 5,
                      "filename": "<workspace>/list.k.json",
                      "line": 5,
                      "node": {
                        "data": {
                          "is_long_string": false,
                          "raw_value": "\"This is Alice\"",
                          "value": "This is Alice"
                        },
                        "type": "StringLit"
                      }
                    }
                  }
                },
                {
                  "column": 4,
                  "end_column": 5,
                  "end_line": 6,
                  "filename": "<workspace>/list.k.json",
                  "line": 2,
                  "node": {
                    "insert_index": -1,
                    "key": {
                      "column": 8,
                      "end_column": 14,
                      "end_line": 3,
                      "filename": "<workspace>/list.k.json",
                      "line": 3,
                      "node": {
                        "data": {
                          "is_long_string": false,
                          "raw_value": "\"name\"",
                          "value": "name"
                        },
                        "type": "StringLit"
                      }
                    },
                    "operation": "Union",
                    "value": {
                      "column": 16,
                      "end_column": 23,
                      "end_line": 3,
                      "filename": "<workspace>/list.k.json",
                      "line": 3,
                      "node": {
                        "data": {
                          "is_long_string": false,
                          "raw_value": "\"Alice\"",
                          "value": "Alice"
                        },
                        "type": "StringLit"
                      }
                    }
                  }
                }
              ]
            },
            "type": "Config"
          }
        }
      ]
    },
    "type": "List"
  }
}
