kclvm/tools/src/vet/snapshots/kclvm_tools__vet__tests__test_expr_builder__build_with_json_no_schema_name-5.snap
---
source: tools/src/vet/tests.rs
expression: got_ast_json_str
---
{
  "column": 0,
  "end_column": 1,
  "end_line": 13,
  "filename": "<workspace>/complex.k.json",
  "line": 1,
  "node": {
    "data": {
      "items": [
        {
          "column": 0,
          "end_column": 1,
          "end_line": 13,
          "filename": "<workspace>/complex.k.json",
          "line": 1,
          "node": {
            "insert_index": -1,
            "key": {
              "column": 4,
              "end_column": 9,
              "end_line": 3,
              "filename": "<workspace>/complex.k.json",
              "line": 3,
              "node": {
                "data": {
                  "is_long_string": false,
                  "raw_value": "\"age\"",
                  "value": "age"
                },
                "type": "StringLit"
              }
            },
            "operation": "Union",
            "value": {
              "column": 11,
              "end_column": 13,
              "end_line": 3,
              "filename": "<workspace>/complex.k.json",
              "line": 3,
              "node": {
                "data": {
                  "binary_suffix": null,
                  "value": {
                    "data": 18,
                    "type": "Int"
                  }
                },
                "type": "NumberLit"
              }
            }
          }
        },
        {
          "column": 0,
          "end_column": 1,
          "end_line": 13,
          "filename": "<workspace>/complex.k.json",
          "line": 1,
          "node": {
            "insert_index": -1,
            "key": {
              "column": 4,
              "end_column": 10,
              "end_line": 5,
              "filename": "<workspace>/complex.k.json",
              "line": 5,
              "node": {
                "data": {
                  "is_long_string": false,
                  "raw_value": "\"data\"",
                  "value": "data"
                },
                "type": "StringLit"
              }
            },
            "operation": "Union",
            "value": {
              "column": 12,
              "end_column": 5,
              "end_line": 8,
              "filename": "<workspace>/complex.k.json",
              "line": 5,
              "node": {
                "data": {
                  "items": [
                    {
                      "column": 12,
                      "end_column": 5,
                      "end_line": 8,
                      "filename": "<workspace>/complex.k.json",
                      "line": 5,
                      "node": {
                        "insert_index": -1,
                        "key": {
                          "column": 8,
                          "end_column": 12,
                          "end_line": 6,
                          "filename": "<workspace>/complex.k.json",
                          "line": 6,
                          "node": {
                            "data": {
                              "is_long_string": false,
                              "raw_value": "\"id\"",
                              "value": "id"
                            },
                            "type": "StringLit"
                          }
                        },
                        "operation": "Union",
                        "value": {
                          "column": 14,
                          "end_column": 15,
                          "end_line": 6,
                          "filename": "<workspace>/complex.k.json",
                          "line": 6,
                          "node": {
                            "data": {
                              "binary_suffix": null,
                              "value": {
                                "data": 1,
                                "type": "Int"
                              }
                            },
                            "type": "NumberLit"
                          }
                        }
                      }
                    },
                    {
                      "column": 12,
                      "end_column": 5,
                      "end_line": 8,
                      "filename": "<workspace>/complex.k.json",
                      "line": 5,
                      "node": {
                        "insert_index": -1,
                        "key": {
                          "column": 8,
                          "end_column": 15,
                          "end_line": 7,
                          "filename": "<workspace>/complex.k.json",
                          "line": 7,
                          "node": {
                            "data": {
                              "is_long_string": false,
                              "raw_value": "\"value\"",
                              "value": "value"
                            },
                            "type": "StringLit"
                          }
                        },
                        "operation": "Union",
                        "value": {
                          "column": 17,
                          "end_column": 25,
                          "end_line": 7,
                          "filename": "<workspace>/complex.k.json",
                          "line": 7,
                          "node": {
                            "data": {
                              "is_long_string": false,
                              "raw_value": "\"value1\"",
                              "value": "value1"
                            },
                            "type": "StringLit"
                          }
                        }
                      }
                    }
                  ]
                },
                "type": "Config"
              }
            }
          }
        },
        {
          "column": 0,
          "end_column": 1,
          "end_line": 13,
          "filename": "<workspace>/complex.k.json",
          "line": 1,
          "node": {
            "insert_index": -1,
            "key": {
              "column": 4,
              "end_column": 8,
              "end_line": 12,
              "filename": "<workspace>/complex.k.json",
              "line": 12,
              "node": {
                "data": {
                  "is_long_string": false,
                  "raw_value": "\"hc\"",
                  "value": "hc"
                },
                "type": "StringLit"
              }
            },
            "operation": "Union",
            "value": {
              "column": 10,
              "end_column": 19,
              "end_line": 12,
              "filename": "<workspace>/complex.k.json",
              "line": 12,
              "node": {
                "data": {
                  "ctx": "Load",
                  "elts": [
                    {
                      "column": 11,
                      "end_column": 12,
                      "end_line": 12,
                      "filename": "<workspace>/complex.k.json",
                      "line": 12,
                      "node": {
                        "data": {
                          "binary_suffix": null,
                          "value": {
                            "data": 1,
                            "type": "Int"
                          }
                        },
                        "type": "NumberLit"
                      }
                    },
                    {
                      "column": 14,
                      "end_column": 15,
                      "end_line": 12,
                      "filename": "<workspace>/complex.k.json",
                      "line": 12,
                      "node": {
                        "data": {
                          "binary_suffix": null,
                          "value": {
                            "data": 2,
                            "type": "Int"
                          }
                        },
                        "type": "NumberLit"
                      }
                    },
                    {
                      "column": 17,
                      "end_column": 18,
                      "end_line": 12,
                      "filename": "<workspace>/complex.k.json",
                      "line": 12,
                      "node": {
                        "data": {
                          "binary_suffix": null,
                          "value": {
                            "data": 3,
                            "type": "Int"
                          }
                        },
                        "type": "NumberLit"
                      }
                    }
                  ]
                },
                "type": "List"
              }
            }
          }
        },
        {
          "column": 0,
          "end_column": 1,
          "end_line": 13,
          "filename": "<workspace>/complex.k.json",
          "line": 1,
          "node": {
            "insert_index": -1,
            "key": {
              "column": 4,
              "end_column": 12,
              "end_line": 9,
              "filename": "<workspace>/complex.k.json",
              "line": 9,
              "node": {
                "data": {
                  "is_long_string": false,
                  "raw_value": "\"labels\"",
                  "value": "labels"
                },
                "type": "StringLit"
              }
            },
            "operation": "Union",
            "value": {
              "column": 14,
              "end_column": 5,
              "end_line": 11,
              "filename": "<workspace>/complex.k.json",
              "line": 9,
              "node": {
                "data": {
                  "items": [
                    {
                      "column": 14,
                      "end_column": 5,
                      "end_line": 11,
                      "filename": "<workspace>/complex.k.json",
                      "line": 9,
                      "node": {
                        "insert_index": -1,
                        "key": {
                          "column": 8,
                          "end_column": 13,
                          "end_line": 10,
                          "filename": "<workspace>/complex.k.json",
                          "line": 10,
                          "node": {
                            "data": {
                              "is_long_string": false,
                              "raw_value": "\"key\"",
                              "value": "key"
                            },
                            "type": "StringLit"
                          }
                        },
                        "operation": "Union",
                        "value": {
                          "column": 15,
                          "end_column": 22,
                          "end_line": 10,
                          "filename": "<workspace>/complex.k.json",
                          "line": 10,
                          "node": {
                            "data": {
                              "is_long_string": false,
                              "raw_value": "\"value\"",
                              "value": "value"
                            },
                            "type": "StringLit"
                          }
                        }
                      }
                    }
                  ]
                },
                "type": "Config"
              }
            }
          }
        },
        {
          "column": 0,
          "end_column": 1,
          "end_line": 13,
          "filename": "<workspace>/complex.k.json",
          "line": 1,
          "node": {
            "insert_index": -1,
            "key": {
              "column": 4,
              "end_column": 13,
              "end_line": 4,
              "filename": "<workspace>/complex.k.json",
              "line": 4,
              "node": {
                "data": {
                  "is_long_string": false,
                  "raw_value": "\"message\"",
                  "value": "message"
                },
                "type": "StringLit"
              }
            },
            "operation": "Union",
            "value": {
              "column": 15,
              "end_column": 30,
              "end_line": 4,
              "filename": "<workspace>/complex.k.json",
              "line": 4,
              "node": {
                "data": {
                  "is_long_string": false,
                  "raw_value": "\"This is Alice\"",
                  "value": "This is Alice"
                },
                "type": "StringLit"
              }
            }
          }
        },
        {
          "column": 0,
          "end_column": 1,
          "end_line": 13,
          "filename": "<workspace>/complex.k.json",
          "line": 1,
          "node": {
            "insert_index": -1,
            "key": {
              "column": 4,
              "end_column": 10,
              "end_line": 2,
              "filename": "<workspace>/complex.k.json",
              "line": 2,
              "node": {
                "data": {
                  "is_long_string": false,
                  "raw_value": "\"name\"",
                  "value": "name"
                },
                "type": "StringLit"
              }
            },
            "operation": "Union",
            "value": {
              "column": 12,
              "end_column": 19,
              "end_line": 2,
              "filename": "<workspace>/complex.k.json",
              "line": 2,
              "node": {
                "data": {
                  "is_long_string": false,
                  "raw_value": "\"Alice\"",
                  "value": "Alice"
                },
                "type": "StringLit"
              }
            }
          }
        }
      ]
    },
    "type": "Config"
  }
}
