kclvm/tools/src/vet/snapshots/kclvm_tools__vet__tests__test_expr_builder__build_with_json_no_schema_name-6.snap
---
source: tools/src/vet/tests.rs
expression: got_ast_json_str
---
{
  "column": 0,
  "end_column": 1,
  "end_line": 3,
  "filename": "<workspace>/only_with_null.json",
  "line": 1,
  "node": {
    "items": [
      {
        "column": 0,
        "end_column": 1,
        "end_line": 3,
        "filename": "<workspace>/only_with_null.json",
        "line": 1,
        "node": {
          "key": {
            "column": 4,
            "end_column": 16,
            "end_line": 2,
            "filename": "<workspace>/only_with_null.json",
            "line": 2,
            "node": {
              "is_long_string": false,
              "raw_value": "\"null_value\"",
              "type": "StringLit",
              "value": "null_value"
            }
          },
          "operation": "Union",
          "value": {
            "column": 18,
            "end_column": 22,
            "end_line": 2,
            "filename": "<workspace>/only_with_null.json",
            "line": 2,
            "node": {
              "type": "NameConstantLit",
              "value": "None"
            }
          }
        }
      }
    ],
    "type": "Config"
  }
}
